chat schemasa fixed
